tdf#120351 DOCX import: fix slow endnote import

by parsing endnotes.xml only once instead
of parsing again and again for every endnotes.
This was a serious performance problem for
documents with hundreds of endnotes, where the
endnote import took minutes instead of seconds.

Note: switch off CHECK_NOTMERGED in a debug build
to measure realistic speed-up, e.g. 98 s -> 18 s
for a document with thousand of endnotes.

Follow-up of commit 9b39ce0e66acfe812e1d50e530dc2ccdef3e1357
"tdf#76260 DOCX import: fix slow footnote import".

Change-Id: I88cdc5101c25041f985fdc23739a0dadf24a13e0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/111030
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>